--- a/_includes/widgets/publication_item.html
+++ b/_includes/widgets/publication_item.html
@@ -1,20 +1,20 @@
 {% assign item = include.item %}
 <div class="d-none d-md-block">
-    <div class="row no-gutters border-bottom border-gray">
+    <div class="row no-gutters" style="border-bottom: 1px solid var(--glass-border);">
         {%- if item.cover -%}
         <div class="col-md-3 col-xl-2 mb-md-0 p-md-3">
-            <img data-src="{{ item.cover | relative_url }}" alt="{{ item.title }}" class="lazy w-100 rounded-sm" src="{{ '/assets/images/empty_300x200.png' | relative_url }}">
+            <img data-src="{{ item.cover | relative_url }}" alt="{{ item.title }}" class="lazy w-100" style="border-radius: 12px;" src="{{ '/assets/images/empty_300x200.png' | relative_url }}">
         </div>
         <div class="col-md-9 col-xl-10 p-3 pl-md-0">
         {%- else -%}
         <div class="col p-3 ml-md-2">
         {%- endif -%}
-            <h5 class="mt-0 mb-1 font-weight-normal">{{ item.title }}</h5>
-            <p class="mt-0 mb-0 small">{% include widgets/author_list.html authors=item.authors %}</p>
-            <p class="mt-0 mb-0 small">{{item.pub_pre}}<i>{{ item.pub }}</i>{{ item.pub_post }} {{ item.pub_date }} {{ item.pub_last }}</p>
-            <p class="mt-0 mb-0 small text-muted">{{ item.abstract }}</p>
+            <h5 class="mt-0 mb-1 font-weight-normal" style="color: var(--text-primary);">{{ item.title }}</h5>
+            <p class="mt-0 mb-0 small" style="color: var(--text-secondary);">{% include widgets/author_list.html authors=item.authors %}</p>
+            <p class="mt-0 mb-0 small" style="color: var(--text-secondary);">{{item.pub_pre}}<i style="color: var(--accent-secondary);">{{ item.pub }}</i>{{ item.pub_post }} {{ item.pub_date }} {{ item.pub_last }}</p>
+            <p class="mt-0 mb-0 small" style="color: var(--text-muted);">{{ item.abstract }}</p>
             
-            <p class="small pb-0 mb-0 lh-125 text-muted abstract-links">
+            <p class="small pb-0 mb-0 lh-125 abstract-links">
                 {% for link in item.links %}
                 {% if link[1].url %}
                 <a target="{{ link[1]['target'] }}" href="{{ link[1]['url'] }}">[{{ link[0] }}]</a>
@@ -28,21 +28,21 @@
     </div>
 </div>
 
-<div class="card w-100 d-md-none border-top-0 border-right-0 border-left-0 rounded-0" style="overflow-y: scroll;">
+<div class="card w-100 d-md-none border-0 rounded-0" style="overflow-y: scroll; background: transparent !important;">
     {%- if item.cover -%}
-    <img data-src="{{ item.cover | relative_url }}" alt="{{ item.title }}" class="lazy card-img w-100" src="{{ '/assets/images/empty_300x200.png' | relative_url }}">
+    <img data-src="{{ item.cover | relative_url }}" alt="{{ item.title }}" class="lazy card-img w-100" style="border-radius: 0;" src="{{ '/assets/images/empty_300x200.png' | relative_url }}">
     {%- else -%}
-    <img alt="{{ item.title }}" class="w-100 rounded-sm" src="{{ '/assets/images/empty_300x200.png' | relative_url }}">
+    <img alt="{{ item.title }}" class="w-100" style="border-radius: 0;" src="{{ '/assets/images/empty_300x200.png' | relative_url }}">
     {%- endif -%}
-    <div class="card-img-overlay d-flex align-items-start flex-column" style="background-color: rgba(255, 255, 255, 0.85);">
+    <div class="card-img-overlay d-flex align-items-start flex-column" style="background-color: rgba(15, 12, 41, 0.85); border-radius: 0;">
         <div class="mb-auto"></div>
         <div>
-            <h5 class="mt-0 mb-1 font-weight-normal">{{ item.title }}</h5>
-            <p class="mt-0 mb-0 small">{% include widgets/author_list.html authors=item.authors %}</p>
-            <p class="mt-0 mb-0 small">{{item.pub_pre}}<i>{{ item.pub }}</i>{{ item.pub_post }} {{ item.pub_date }} {{ item.pub_last }}</p>
-            <p class="mt-0 mb-0 small text-muted d-none d-sm-block">{{ item.abstract }}</p>
+            <h5 class="mt-0 mb-1 font-weight-normal" style="color: var(--text-primary);">{{ item.title }}</h5>
+            <p class="mt-0 mb-0 small" style="color: var(--text-secondary);">{% include widgets/author_list.html authors=item.authors %}</p>
+            <p class="mt-0 mb-0 small" style="color: var(--text-secondary);">{{item.pub_pre}}<i style="color: var(--accent-secondary);">{{ item.pub }}</i>{{ item.pub_post }} {{ item.pub_date }} {{ item.pub_last }}</p>
+            <p class="mt-0 mb-0 small d-none d-sm-block" style="color: var(--text-muted);">{{ item.abstract }}</p>
             
-            <p class="small pb-0 mb-0 lh-125 text-muted abstract-links">
+            <p class="small pb-0 mb-0 lh-125 abstract-links">
                 {% for link in item.links %}
                 {% if link[1].url %}
                 <a target="{{ link[1]['target'] }}" href="{{ link[1]['url'] }}">[{{ link[0] }}]</a>
